# RL-Book

ch13_instructor_guide/: INSTRUCTOR_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
ch13_instructor_guide/notebooks/: 00_setup_and_validation.ipynb  01_conceptual_and_mathematical_solutions.ipynb  02_robot_learning_environment.ipynb  03_behavior_cloning_pick_place.ipynb  04_sim_to_real_perturbation_suite.ipynb  05_offline_rl_dataset_design.ipynb  06_vla_benchmark_design.ipynb  07_method_comparison.ipynb
ch13_instructor_guide/solutions/: ch13_solutions.md
ch13_instructor_guide/src/ch13_guide/: __init__.py  models.py  utils.py
ch13_instructor_guide/src/ch13_guide/envs/: __init__.py  reaching_env.py
ch13_instructor_guide/tests/: test_reaching_env.py
ch1_instructor_package/: README.md  chapter1_instructor_solutions.md  sample_output.txt
ch1_instructor_package/notebooks/: chapter1_grid_rl_colab.ipynb
ch1_instructor_package/src/: algorithms.py  gridworld.py  run_experiments.py
chapter2_instructor_guide/: README.md  environment.yml  instructor_guide_ch2_solutions.md  pyproject.toml  requirements.txt
chapter2_instructor_guide/latex/: instructor_guide_ch2_solutions.tex
chapter2_instructor_guide/notebooks/: ch2_exercise_solutions_colab.ipynb
chapter2_instructor_guide/src/ch2_rl_fundamentals/: __init__.py  ch2_utils.py
chapter2_instructor_guide/tests/: test_ch2_utils.py
