
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ch13-instructor-guide"
version = "0.1.0"
description = "Instructor guide and executable exercises for robotic reinforcement learning"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "gymnasium>=1.0,<2",
  "torch>=2.5,<3",
  "matplotlib>=3.8,<4",
  "pandas>=2.2,<3",
  "scikit-learn>=1.4,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "jupyter>=1.1,<2",
  "stable-baselines3>=2.5,<3"
]

[tool.setuptools.packages.find]
where = ["src"]
