[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ch2-rl-fundamentals"
version = "0.1.0"
description = "Instructor-guide utilities for Chapter 2 of the DRL book"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "torch>=2.0",
    "gymnasium>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]
